--- a/hw3/experiments/sac/sanity_invertedpendulum_reinforce.yaml
+++ b/hw3/experiments/sac/sanity_invertedpendulum_reinforce.yaml
@@ -2,3 +2,5 @@ base_config: sac
 env_name: InvertedPendulum-v4
 exp_name: sanity_invpendulum_reinforce
 actor_gradient_type: reinforce
+use_soft_target_update: true
+soft_target_update_rate: 0.005
