--- a/hw3/experiments/sac/sanity_invertedpendulum_reparametrize.yaml
+++ b/hw3/experiments/sac/sanity_invertedpendulum_reparametrize.yaml
@@ -2,3 +2,5 @@ base_config: sac
 env_name: InvertedPendulum-v4
 exp_name: sanity_invpendulum_reparametrize
 actor_gradient_type: reparametrize
+use_soft_target_update: true
+soft_target_update_rate: 0.005
