--- a/hw3/experiments/sac/sanity_pendulum.yaml
+++ b/hw3/experiments/sac/sanity_pendulum.yaml
@@ -3,6 +3,7 @@ env_name: Pendulum-v1
 exp_name: sanity_pendulum
 use_entropy_bonus: true
 temperature: 0.1
-#target_update_period: 1000
-use_soft_target_update: true
-soft_target_update_rate: 0.005
+# Use hard target update by default.
+# comment this line and uncomment the next to test your soft target update.
+target_update_period: 1000
+# soft_target_update_rate: 0.005
